--- a/Starter_Code/forecasting_net_prophet.ipynb
+++ b/Starter_Code/forecasting_net_prophet.ipynb
@@ -104,13 +104,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
+      "Requirement already satisfied: param<2.0,>=1.9.3 in c:\\users\\egeor\\anaconda3\\envs\\pyviz\\lib\\site-packages (from holoviews) (1.12.0)\n",
+      "Requirement already satisfied: numpy>=1.0 in c:\\users\\egeor\\anaconda3\\envs\\pyviz\\lib\\site-packages (from holoviews) (1.20.1)\n",
+      "Requirement already satisfied: pyviz_comms>=0.7.4 in c:\\users\\egeor\\anaconda3\\envs\\pyviz\\lib\\site-packages (from holoviews) (2.1.0)\n",
+      "Requirement already satisfied: panel>=0.8.0 in c:\\users\\egeor\\anaconda3\\envs\\pyviz\\lib\\site-packages (from holoviews) (0.12.1)\n",
+      "Requirement already satisfied: colorcet in c:\\users\\egeor\\anaconda3\\envs\\pyviz\\lib\\site-packages (from holoviews) (2.0.6)\n",
+      "Requirement already satisfied: pandas>=0.20.0 in c:\\users\\egeor\\anaconda3\\envs\\pyviz\\lib\\site-packages (from holoviews) (1.3.4)\n",
+      "Requirement already satisfied: pytz>=2017.3 in c:\\users\\egeor\\anaconda3\\envs\\pyviz\\lib\\site-packages (from pandas>=0.20.0->holoviews) (2021.3)\n",
+      "Requirement already satisfied: python-dateutil>=2.7.3 in c:\\users\\egeor\\anaconda3\\envs\\pyviz\\lib\\site-packages (from pandas>=0.20.0->holoviews) (2.8.2)\n",
+      "Requirement already satisfied: bleach in c:\\users\\egeor\\anaconda3\\envs\\pyviz\\lib\\site-packages (from panel>=0.8.0->holoviews) (4.1.0)\n",
+      "Requirement already satisfied: bokeh<2.4.0,>=2.3.0 in c:\\users\\egeor\\anaconda3\\envs\\pyviz\\lib\\site-packages (from panel>=0.8.0->holoviews) (2.3.2)\n",
+      "Requirement already satisfied: tqdm>=4.48.0 in c:\\users\\egeor\\anaconda3\\envs\\pyviz\\lib\\site-packages (from panel>=0.8.0->holoviews) (4.62.3)\n",
+      "Requirement already satisfied: pyct>=0.4.4 in c:\\users\\egeor\\anaconda3\\envs\\pyviz\\lib\\site-packages (from panel>=0.8.0->holoviews) (0.4.6)\n",
+      "Requirement already satisfied: markdown in c:\\users\\egeor\\anaconda3\\envs\\pyviz\\lib\\site-packages (from panel>=0.8.0->holoviews) (3.3.4)\n",
+      "Requirement already satisfied: requests in c:\\users\\egeor\\anaconda3\\envs\\pyviz\\lib\\site-packages (from panel>=0.8.0->holoviews) (2.26.0)\n",
+      "Requirement already satisfied: typing-extensions>=3.7.4 in c:\\users\\egeor\\anaconda3\\envs\\pyviz\\lib\\site-packages (from bokeh<2.4.0,>=2.3.0->panel>=0.8.0->holoviews) (3.10.0.2)\n",
+      "Requirement already satisfied: pillow>=7.1.0 in c:\\users\\egeor\\anaconda3\\envs\\pyviz\\lib\\site-packages (from bokeh<2.4.0,>=2.3.0->panel>=0.8.0->holoviews) (8.4.0)\n",
+      "Requirement already satisfied: tornado>=5.1 in c:\\users\\egeor\\anaconda3\\envs\\pyviz\\lib\\site-packages (from bokeh<2.4.0,>=2.3.0->panel>=0.8.0->holoviews) (6.1)\n",
+      "Requirement already satisfied: Jinja2>=2.9 in c:\\users\\egeor\\anaconda3\\envs\\pyviz\\lib\\site-packages (from bokeh<2.4.0,>=2.3.0->panel>=0.8.0->holoviews) (3.0.3)\n",
+      "Requirement already satisfied: PyYAML>=3.10 in c:\\users\\egeor\\anaconda3\\envs\\pyviz\\lib\\site-packages (from bokeh<2.4.0,>=2.3.0->panel>=0.8.0->holoviews) (6.0)\n",
+      "Requirement already satisfied: packaging>=16.8 in c:\\users\\egeor\\anaconda3\\envs\\pyviz\\lib\\site-packages (from bokeh<2.4.0,>=2.3.0->panel>=0.8.0->holoviews) (21.0)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\egeor\\anaconda3\\envs\\pyviz\\lib\\site-packages (from python-dateutil>=2.7.3->pandas>=0.20.0->holoviews) (1.16.0)\n",
+      "Requirement already satisfied: colorama in c:\\users\\egeor\\anaconda3\\envs\\pyviz\\lib\\site-packages (from tqdm>=4.48.0->panel>=0.8.0->holoviews) (0.4.4)\n",
+      "Requirement already satisfied: webencodings in c:\\users\\egeor\\anaconda3\\envs\\pyviz\\lib\\site-packages (from bleach->panel>=0.8.0->holoviews) (0.5.1)\n",
+      "Requirement already satisfied: importlib-metadata in c:\\users\\egeor\\anaconda3\\envs\\pyviz\\lib\\site-packages (from markdown->panel>=0.8.0->holoviews) (4.8.2)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in c:\\users\\egeor\\anaconda3\\envs\\pyviz\\lib\\site-packages (from requests->panel>=0.8.0->holoviews) (1.26.7)\n",
+      "Requirement already satisfied: charset-normalizer~=2.0.0 in c:\\users\\egeor\\anaconda3\\envs\\pyviz\\lib\\site-packages (from requests->panel>=0.8.0->holoviews) (2.0.0)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\egeor\\anaconda3\\envs\\pyviz\\lib\\site-packages (from requests->panel>=0.8.0->holoviews) (3.1)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\egeor\\anaconda3\\envs\\pyviz\\lib\\site-packages (from requests->panel>=0.8.0->holoviews) (2021.10.8)\n",
+      "Requirement already satisfied: MarkupSafe>=2.0 in c:\\users\\egeor\\anaconda3\\envs\\pyviz\\lib\\site-packages (from Jinja2>=2.9->bokeh<2.4.0,>=2.3.0->panel>=0.8.0->holoviews) (2.0.1)\n",
+      "Requirement already satisfied: pyparsing>=2.0.2 in c:\\users\\egeor\\anaconda3\\envs\\pyviz\\lib\\site-packages (from packaging>=16.8->bokeh<2.4.0,>=2.3.0->panel>=0.8.0->holoviews) (3.0.5)\n",
       "Requirement already satisfied: zipp>=0.5 in c:\\users\\egeor\\anaconda3\\envs\\pyviz\\lib\\site-packages (from importlib-metadata->markdown->panel>=0.8.0->holoviews) (3.6.0)\n",
       "Libraries successfully installed\n"
      ]
@@ -133,26 +164,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'fbprophet'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_22964/1605780709.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mholoviews\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mhv\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mfbprophet\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mProphet\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mhvplot\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpandas\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mdatetime\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mdt\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'fbprophet'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import the required libraries and dependencies\n",
     "import pandas as pd\n",
     "import holoviews as hv\n",
-    "from fbprophet import Prophet\n",
+    "#from fbprophet import Prophet\n",
     "import hvplot.pandas\n",
     "import datetime as dt\n",
     "%matplotlib inline"
@@ -182,9 +201,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'google'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_16928/4058562067.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;31m# Set the \"Date\" column as the Datetime Index.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mgoogle\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcolab\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mfiles\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m \u001b[0muploaded\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfiles\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mupload\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'google'"
+     ]
+    }
+   ],
    "source": [
     "# Upload the \"google_hourly_search_trends.csv\" file into Colab, then store in a Pandas DataFrame\n",
     "# Set the \"Date\" column as the Datetime Index.\n",
@@ -192,10 +223,12 @@
     "from google.colab import files\n",
     "uploaded = files.upload()\n",
     "\n",
-    "df_mercado_trends = # YOUR CODE HERE\n",
+    "df_mercado_trends = pd.read_csv('../Resources/google_hourly_search_trends.csv')\n",
     "\n",
+    "# Set the \"Date\" column as the Datetime Index.\n",
+    "df_mercado_trends[\"time\"][0]\n",
     "# Review the first and last five rows of the DataFrame\n",
-    "# YOUR CODE HERE\n"
+    "df_mercado_trends.head()\n"
    ]
   },
   {
